# grpc-implementation

./: Cargo.toml  README.md  build.rs  errors_on_way.txt  learnings.txt
proto/: payments.proto
src/: client.rs  server.rs
