[package]
name = "grpc-impl"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"

[dependencies]
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"


[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
